--- a/src/web/index.html
+++ b/src/web/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@500;700&family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header class="topbar">
@@ -15,7 +15,13 @@
         <p class="topbar__kicker">Boardgame Studio</p>
         <h1>Asset Editor</h1>
       </div>
-      <div class="topbar__status" id="status">Ready.</div>
+      <div class="topbar__right">
+        <div class="topbar__status" id="status">Ready.</div>
+        <div class="topbar__actions">
+          <button id="connect-drive" class="button button--ghost">Connect Drive</button>
+          <button id="disconnect-drive" class="button button--ghost" hidden>Disconnect</button>
+        </div>
+      </div>
     </header>
 
     <main class="shell">
@@ -31,6 +37,6 @@
       </section>
     </main>
 
-    <script type="module" src="/games.js?v=4"></script>
+    <script type="module" src="games.js?v=5"></script>
   </body>
 </html>
